# CMakeListsTaskMIPT

./: CMakeLists.txt  README.md
A/: CMakeLists.txt  lib.cpp  lib.h
B/: main.cpp  main.h
C/: preparing.py
Doxygen/: doxygen.cmake
task1/: CMakeLists.txt
task1/A/: lib.cpp  lib.h
task1/B/: main.cpp  main.h
